[gd_scene load_steps=2 format=2]

[ext_resource path="res://Dialogue/DialogueHUD/ChoiceButtons.gd" type="Script" id=1]

[node name="ChoiceButtons" type="Control"]
margin_left = -0.0240173
margin_top = -0.199997
margin_right = -2.02405
margin_bottom = 0.199982
rect_pivot_offset = Vector2( 255, 131 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoiceButton1" type="Button" parent="."]
anchor_left = -0.00195312
anchor_right = -0.00195312
margin_right = 512.0
margin_bottom = 48.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoiceButton2" type="Button" parent="."]
margin_top = 72.0
margin_right = 512.0
margin_bottom = 120.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoiceButton3" type="Button" parent="."]
margin_top = 142.0
margin_right = 512.0
margin_bottom = 190.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoiceButton4" type="Button" parent="."]
margin_top = 214.0
margin_right = 512.0
margin_bottom = 262.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="ChoiceButton1" to="." method="_on_ChoiceButton1_pressed"]
[connection signal="pressed" from="ChoiceButton2" to="." method="_on_ChoiceButton2_pressed"]
[connection signal="pressed" from="ChoiceButton3" to="." method="_on_ChoiceButton3_pressed"]
[connection signal="pressed" from="ChoiceButton4" to="." method="_on_ChoiceButton4_pressed"]
